-
Bug
-
Resolution: Fixed
-
P1
-
20
-
b14
-
Verified
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8320595 | 17.0.11-oracle | Daniel Skantz | P1 | Closed | Fixed | b01 |
JDK-8321238 | 17.0.11 | Goetz Lindenmaier | P1 | Resolved | Fixed | b01 |
JDK-8320621 | 11.0.23-oracle | Daniel Skantz | P1 | Closed | Fixed | b01 |
JDK-8321580 | 11.0.23 | Andrew Lu | P1 | Resolved | Fixed | b01 |
vmTestbase/gc/lock/jni/jnilock001/TestDescription.java
Here's a snippet from the log file:
#section:main
----------messages:(4/454)----------
command: main -Xbootclasspath/a:. -Xlog:gc=debug:gc.log -XX:+HeapDumpOnOutOfMemoryError -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI gc.lock.LockerTest -lockers jni -t 1
reason: User specified action: run main/othervm/native -Xbootclasspath/a:. -Xlog:gc=debug:gc.log -XX:+HeapDumpOnOutOfMemoryError -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI gc.lock.LockerTest -lockers jni -t 1
Mode: othervm [/othervm specified]
elapsed time (seconds): 65.634
----------configuration:(0/0)----------
----------System.out:(35/2309)----------
Stress time: 120 seconds
Stress iterations factor: 1
Stress threads factor: 1
Stress runs factor: 1
Max memory: 1003487232
Sleep time: 500
Iterations: 0
Number of threads: 1
Run GC thread: false
Run mem diag thread: false
Run forever: false
Starting Thread[#19,gc.lock.LockerTest$Worker@1b49a530,5,MainThreadGroup]
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/defNewGeneration.cpp:870
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S71798/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/069b35e7-3997-4f1d-ac34-bb6183f4f9f3/runs/d9bc802f-606a-4d6b-8b3c-69684b064d27/workspace/open/src/hotspot/share/gc/serial/defNewGeneration.cpp:870), pid=2094368, tid=2094375
# assert(gch->gc_cause() == GCCause::_scavenge_alot || !gch->incremental_collection_failed()) failed: Twice in a row
#
# JRE version: Java(TM) SE Runtime Environment (20.0+13) (fastdebug build 20-ea+13-791)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+13-791, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, serial gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xbc9064] DefNewGeneration::gc_epilogue(bool)+0x354
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S71916/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4de9c880-c5ab-4d25-86b5-695f0037ced5/runs/2c6be331-cadb-4277-8ed2-792d881c0901/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_gc_locker/scratch/1/core.2094368)
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S71916/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4de9c880-c5ab-4d25-86b5-695f0037ced5/runs/2c6be331-cadb-4277-8ed2-792d881c0901/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_vm_gc_locker/scratch/1/hs_err_pid2094368.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(0/0)----------
----------rerun:(40/7816)*----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007fa93c1511d0): VMThread "VM Thread" [stack: 0x00007fa942149000,0x00007fa942249000] [id=2094375]
Stack: [0x00007fa942149000,0x00007fa942249000], sp=0x00007fa9422475c0, free space=1017k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xbc9064] DefNewGeneration::gc_epilogue(bool)+0x354 (defNewGeneration.cpp:870)
V [libjvm.so+0xedde63] GenCollectedHeap::gc_epilogue(bool)+0x33 (genCollectedHeap.cpp:1171)
V [libjvm.so+0xee201c] GenCollectedHeap::do_collection(bool, bool, unsigned long, bool, GenCollectedHeap::GenerationType)+0x8ec (genCollectedHeap.cpp:577)
V [libjvm.so+0xee2e84] GenCollectedHeap::do_full_collection(bool, GenCollectedHeap::GenerationType)+0x24 (genCollectedHeap.cpp:871)
V [libjvm.so+0xec9991] VM_GenCollectFull::doit()+0x51 (gcVMOperations.cpp:192)
V [libjvm.so+0x1b784e2] VM_Operation::evaluate()+0x182 (vmOperations.cpp:71)
V [libjvm.so+0x1b9d2ba] VMThread::evaluate_operation(VM_Operation*)+0x18a (vmThread.cpp:282)
V [libjvm.so+0x1b9eb5f] VMThread::inner_execute(VM_Operation*)+0x40f (vmThread.cpp:429)
V [libjvm.so+0x1b9ed35] VMThread::loop()+0xc5 (vmThread.cpp:496)
V [libjvm.so+0x1b9ee50] VMThread::run()+0xb0 (vmThread.cpp:175)
V [libjvm.so+0x1a82a10] Thread::call_run()+0x100 (thread.cpp:224)
V [libjvm.so+0x17488e3] thread_native_entry(Thread*)+0x103 (os_linux.cpp:707)
- backported by
-
JDK-8321238 GC lock/jni/jnilock001 test failed "assert(gch->gc_cause() == GCCause::_scavenge_alot || !gch->incremental_collection_failed()) failed: Twice in a row"
-
- Resolved
-
-
JDK-8321580 GC lock/jni/jnilock001 test failed "assert(gch->gc_cause() == GCCause::_scavenge_alot || !gch->incremental_collection_failed()) failed: Twice in a row"
-
- Resolved
-
-
JDK-8320595 GC lock/jni/jnilock001 test failed "assert(gch->gc_cause() == GCCause::_scavenge_alot || !gch->incremental_collection_failed()) failed: Twice in a row"
-
- Closed
-
-
JDK-8320621 GC lock/jni/jnilock001 test failed "assert(gch->gc_cause() == GCCause::_scavenge_alot || !gch->incremental_collection_failed()) failed: Twice in a row"
-
- Closed
-
- relates to
-
JDK-8289764 gc/lock tests failed with "OutOfMemoryError: Java heap space: failed reallocation of scalar replaced objects"
-
- Resolved
-
- links to
-
Commit openjdk/jdk11u-dev/325a93fc
-
Commit openjdk/jdk17u-dev/a9c5a5e0
-
Commit openjdk/jdk/9833c025
-
Review openjdk/jdk11u-dev/2338
-
Review openjdk/jdk17u-dev/1994
-
Review openjdk/jdk/10096