8292946: GC lock/jni/jnilock001 test failed "assert(gch->gc_cause() == GCCause::_scavenge_alot || !gch->incremental_collection_failed()) failed: Twice in a row"

Reviewed-by: phh
Backport-of: 9833c025fd7daf6bb1be81d93148a4204a9f184c